@@ -1229,10 +1229,13 @@
       "hunt": "({{index}}) Caça"
     },
     "descriptions": {
-      "use_command": "{{emoji}} Use o comando _{{name}}_ **{{need}}** vezes. ({{has}}/{{need}})",
-      "win_bet": "{{emoji}} Vença apostas no _{{bet}}_ **{{need}}** vezes. ({{has}}/{{need}})",
+      "win_bet": "{{emoji}} Vença apostas no _{{specification}}_ **{{count}}** vezes. ({{has}}/{{need}})",
+      "win_bet-one": "{{emoji}} Vença apostas no _{{specification}}_ **{{count}}** vez. ({{has}}/{{need}})",
+      "win_bet-other": "{{emoji}} Vença apostas no _{{specification}}_ **{{count}}** vezes. ({{has}}/{{need}})",
+      "use_command": "{{emoji}} Use o comando _{{specification}}_ **{{need}}** vezes. ({{has}}/{{need}})",
       "announce_product": "{{emoji}} Anuncie **{{need}}** produtos na feira da vizinhança. ({{has}}/{{need}})",
       "success_on_hunt": "{{emoji}} Obtenha sucesso em **{{need}}** caças. ({{has}}/{{need}})",
+      "use_action_commands": "{{emoji}} Use **{{need}}** comandos de ação. ({{has}}/{{need}})",
       "win_stars_in_bets": "{{emoji}} Conquiste **{{need}}** :star: jogando _blackjack_, _bicho_, ou _roleta_. ({{has}}/{{need}})"
     }
   }
