@@ -1,14 +1,15 @@
 import notificationRepository from '../../database/repositories/notificationRepository';
 import userRepository from '../../database/repositories/userRepository';
+import { ChatInputInteractionCommand } from '../../types/commands';
 import { DatabaseUserSchema } from '../../types/database';
 import { FINISHED_DAILY_AWARD, getDailyById } from './dailies';
 import { getUserDailies } from './getUserDailies';
-import { Daily, DatabaseDaily, WinBetDaily } from './types';
+import { Daily, DatabaseDaily } from './types';
 
 const executeDailies = async (
   user: DatabaseUserSchema,
-  toIncrease: number,
-  shouldExecute: (dailyData: Daily) => boolean,
+  shouldExecute: (dailyData: Daily, specification?: string) => boolean,
+  toIncrease = 1,
 ): Promise<void> => {
   const userDailies = await getUserDailies(user);
 
@@ -21,7 +22,7 @@ const executeDailies = async (
   userDailies.forEach((daily, i) => {
     const dailyData = getDailyById(daily.id);
 
-    if (!shouldExecute(dailyData)) return;
+    if (!shouldExecute(dailyData, daily.specification)) return;
     if (daily.has >= daily.need) return;
 
     needUpdate = true;
@@ -49,12 +50,19 @@ const executeDailies = async (
   await userRepository.updateUserWithSpecialData(user.id, { $set: setter, $inc: incrementer });
 };
 
-const useCommand = async (user: DatabaseUserSchema, commandName: string): Promise<void> => {
-  const shouldExecute = (dailyData: Daily) => {
-    return dailyData.type === 'use_command' && dailyData.name === commandName;
+const useCommand = async (
+  user: DatabaseUserSchema,
+  commandName: string,
+  commandCategory: ChatInputInteractionCommand['category'],
+): Promise<void> => {
+  const shouldExecute = (dailyData: Daily, specification?: string) => {
+    return (
+      (dailyData.type === 'use_command' && specification === commandName) ||
+      (dailyData.type === 'use_action_commands' && commandCategory === 'actions')
+    );
   };
 
-  await executeDailies(user, 1, shouldExecute);
+  await executeDailies(user, shouldExecute);
 };
 
 const winStarsInBet = async (user: DatabaseUserSchema, amount: number): Promise<void> => {
@@ -62,15 +70,18 @@ const winStarsInBet = async (user: DatabaseUserSchema, amount: number): Promise<
     return dailyData.type === 'win_stars_in_bets';
   };
 
-  await executeDailies(user, amount, shouldExecute);
+  await executeDailies(user, shouldExecute, amount);
 };
 
-const winBet = async (user: DatabaseUserSchema, bet: WinBetDaily['bet']): Promise<void> => {
-  const shouldExecute = (dailyData: Daily) => {
-    return dailyData.type === 'win_bet' && dailyData.bet === bet;
+const winBet = async (
+  user: DatabaseUserSchema,
+  bet: 'roleta' | 'bicho' | 'blackjack',
+): Promise<void> => {
+  const shouldExecute = (dailyData: Daily, specification?: string) => {
+    return dailyData.type === 'win_bet' && specification === bet;
   };
 
-  await executeDailies(user, 1, shouldExecute);
+  await executeDailies(user, shouldExecute);
 };
 
 const announceProduct = async (user: DatabaseUserSchema): Promise<void> => {
@@ -78,7 +89,7 @@ const announceProduct = async (user: DatabaseUserSchema): Promise<void> => {
     return dailyData.type === 'announce_product';
   };
 
-  await executeDailies(user, 1, shouldExecute);
+  await executeDailies(user, shouldExecute);
 };
 
 const successOnHunt = async (user: DatabaseUserSchema, times: number): Promise<void> => {
@@ -86,7 +97,13 @@ const successOnHunt = async (user: DatabaseUserSchema, times: number): Promise<v
     return dailyData.type === 'success_on_hunt';
   };
 
-  await executeDailies(user, times, shouldExecute);
+  await executeDailies(user, shouldExecute, times);
 };
 
-export default { useCommand, winBet, winStarsInBet, announceProduct, successOnHunt };
+export default {
+  useCommand,
+  winBet,
+  winStarsInBet,
+  announceProduct,
+  successOnHunt,
+};
