@@ -6,33 +6,13 @@ type DailyTypes =
   | 'win_bet'
   | 'win_stars_in_bets'
   | 'announce_product'
-  | 'success_on_hunt';
+  | 'success_on_hunt'
+  | 'use_action_commands';
 
-interface BaseDaily {
+export interface Daily {
   type: DailyTypes;
   amountLimits: [number, number];
-}
-
-interface UseCommandDaily extends BaseDaily {
-  type: 'use_command';
-  name: string;
-}
-
-export interface WinBetDaily extends BaseDaily {
-  type: 'win_bet';
-  bet: 'blackjack' | 'roleta' | 'bicho';
-}
-
-interface WinStarsInBet extends BaseDaily {
-  type: 'win_stars_in_bets';
-}
-
-interface AnnounceProduct extends BaseDaily {
-  type: 'announce_product';
-}
-
-interface SuccessOnHunt extends BaseDaily {
-  type: 'success_on_hunt';
+  specifications?: string[];
 }
 
 export type Award<Helper extends number | string> = {
@@ -46,7 +26,6 @@ export type DatabaseDaily = {
   need: number;
   has: number;
   redeemed: boolean;
+  specification?: string;
   awards: [Award<number | string>, Award<number | string>, Award<number | string>];
 };
-
-export type Daily = UseCommandDaily | WinBetDaily | WinStarsInBet | AnnounceProduct | SuccessOnHunt;
