@@ -4,6 +4,7 @@ import commandRepository from '../../database/repositories/commandRepository';
 import { ChatInputInteractionCommand } from '../../types/commands';
 import { readDirectory } from '../../utils/fileUtils';
 import { bot } from '../../index';
+import { populateCommand } from '../../modules/dailies/dailies';
 
 const loadCommands = (): void => {
   const addToMap = (command: ChatInputInteractionCommand, filePath: string): void => {
@@ -11,6 +12,7 @@ const loadCommands = (): void => {
 
     bot.commands.set(command.name, command);
     commandRepository.ensureCommandInfo(command.name);
+    if (command.category !== 'dev') populateCommand(command.name);
   };
 
   const pathToResolve = process.env.NODE_ENV === 'test' ? 'packages/events/src' : 'dist';
